# excel-parser

./: README.md  alembic.ini  docker-compose.yaml  env.example  pyproject.toml
app/models/: __init__.py  data.py  project.py  version.py
app/routes/: __init__.py  data_router.py  file_router.py
app/serializers/: __init__.py  chart_data.py  value_types.py  version.py
app/services/: __init__.py  chart.py  excel.py
app/services/utils/: __init__.py  parser.py  validator.py
app/settings/: settings.py
migrations/versions/: e63ffcd534aa_create_initial_tables.py
